--- a/ParseStarterProject-Swift/Resources/Info.plist
+++ b/ParseStarterProject-Swift/Resources/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>DoggIt</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -34,7 +34,7 @@
 	<key>FacebookAppID</key>
 	<string>946461952114525</string>
 	<key>FacebookDisplayName</key>
-	<string>DoggIt</string>
+	<string>QFY</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
